snapshots endpoint
