# gen/restapi/operations/get_snapshots_responses.go
@@ -1,0 +1,108 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+	"github.com/go-openapi/swag"
+
+	models "github.com/bullblock-io/tezTracker/gen/models"
+)
+
+// GetSnapshotsOKCode is the HTTP code returned for type GetSnapshotsOK
+const GetSnapshotsOKCode int = 200
+
+/*GetSnapshotsOK Endpoint for snapshots
+
+swagger:response getSnapshotsOK
+*/
+type GetSnapshotsOK struct {
+	/*The total number of data entries.
+
+	 */
+	XTotalCount int64 `json:"X-Total-Count"`
+
+	/*
+	  In: Body
+	*/
+	Payload []*models.Snapshots `json:"body,omitempty"`
+}
+
+// NewGetSnapshotsOK creates GetSnapshotsOK with default headers values
+func NewGetSnapshotsOK() *GetSnapshotsOK {
+
+	return &GetSnapshotsOK{}
+}
+
+// WithXTotalCount adds the xTotalCount to the get snapshots o k response
+func (o *GetSnapshotsOK) WithXTotalCount(xTotalCount int64) *GetSnapshotsOK {
+	o.XTotalCount = xTotalCount
+	return o
+}
+
+// SetXTotalCount sets the xTotalCount to the get snapshots o k response
+func (o *GetSnapshotsOK) SetXTotalCount(xTotalCount int64) {
+	o.XTotalCount = xTotalCount
+}
+
+// WithPayload adds the payload to the get snapshots o k response
+func (o *GetSnapshotsOK) WithPayload(payload []*models.Snapshots) *GetSnapshotsOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get snapshots o k response
+func (o *GetSnapshotsOK) SetPayload(payload []*models.Snapshots) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetSnapshotsOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	// response header X-Total-Count
+
+	xTotalCount := swag.FormatInt64(o.XTotalCount)
+	if xTotalCount != "" {
+		rw.Header().Set("X-Total-Count", xTotalCount)
+	}
+
+	rw.WriteHeader(200)
+	payload := o.Payload
+	if payload == nil {
+		// return empty array
+		payload = make([]*models.Snapshots, 0, 50)
+	}
+
+	if err := producer.Produce(rw, payload); err != nil {
+		panic(err) // let the recovery middleware deal with this
+	}
+}
+
+// GetSnapshotsNotFoundCode is the HTTP code returned for type GetSnapshotsNotFound
+const GetSnapshotsNotFoundCode int = 404
+
+/*GetSnapshotsNotFound Not Found
+
+swagger:response getSnapshotsNotFound
+*/
+type GetSnapshotsNotFound struct {
+}
+
+// NewGetSnapshotsNotFound creates GetSnapshotsNotFound with default headers values
+func NewGetSnapshotsNotFound() *GetSnapshotsNotFound {
+
+	return &GetSnapshotsNotFound{}
+}
+
+// WriteResponse to the client
+func (o *GetSnapshotsNotFound) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(404)
+}
