# swagger/swagger.yml
@@ -107,6 +107,47 @@ paths:
           description: Not Found
       tags:
         - Blocks
+  '/v2/data/{platform}/{network}/snapshots':
+    get:
+      operationId: getSnapshots
+      produces:
+        - application/json
+      parameters:
+        - in: path
+          name: platform
+          description: Not used
+          required: true
+          type: string
+        - in: path
+          name: network
+          description: Not used
+          required: true
+          type: string
+        - in: query
+          name: limit
+          type: integer
+          default: 20
+          minimum: 1
+          maximum: 500
+        - in: query
+          name: offset
+          description: Offset
+          type: integer
+          default: 0
+          minimum: 0
+      responses:
+        '200':
+          description: Endpoint for snapshots
+          schema:
+            items:
+              $ref: '#/definitions/Snapshots'
+            type: array
+          headers:
+            X-Total-Count:
+              description: The total number of data entries.
+              type: integer
+        '404':
+          description: Not Found
   '/v2/data/{platform}/{network}/info':
     get:
       operationId: getInfo
@@ -1939,3 +1980,11 @@ definitions:
         format: date-time
     required:
       - priority
+  Snapshots:
+    properties:
+      cycle:
+        type: integer
+      snapshot_block:
+        type: integer
+      rolls:
+        type: integer
